force-app/main/default/objects/JMS_Broker_Call_Landing_To_Staging__mdt/JMS_Broker_Call_Landing_To_Staging__mdt.object-meta.xml
<CustomObject>
    <description>This will be used for mapping fields of Broker Call Landing to Broker Call Staging Object</description>
    <label>Broker Call Landing To Staging</label>
    <pluralLabel>Broker Call Landing To Staging</pluralLabel>
</CustomObject>