force-app/main/default/objects/JMS_Broker_Call_Landing_To_Staging__mdt/fields/JMS_Staging_Api_Field__c.field-meta.xml
<CustomField>
    <fullName>JMS_Staging_Api_Field__c</fullName>
    <description>Broker Call Staging object field API name.</description>
    <label>Staging Api Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>