force-app/main/default/objects/JMS_Broker_Call_Landing_To_Staging__mdt/listViews/New_staging_View.listView-meta.xml
<ListView>
    <fullName>New_staging_View</fullName>
    <columns>JMS_Staging_Api_Field__c</columns>
    <columns>JMS_Landing_Api_Field__c</columns>
    <columns>JMS_Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>New staging View</label>
</ListView>